--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:screenOrientation="portrait">
         <activity android:name=".calendar"></activity>
         <activity android:name=".editClass" />
         <activity android:name=".AddClass" />
@@ -21,6 +22,5 @@
             </intent-filter>
         </activity>
     </application>
-
 
 </manifest>
